--- a/_posts/2019-07-09-the-us-narrative-today.html
+++ b/_posts/2019-07-09-the-us-narrative-today.html
@@ -1,106 +1,106 @@
 ---
 images:
-- name: flower-barbed-wire-flower-barbed-wire-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dark-rain.jpg
-- name: oldhouse-granaryfield-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dark-rain.jpg
-- name: server-cloud-server-racks-clouds-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dry-skin.jpg
-- name: diamondcreek-diamondcreek-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/diamondcreek-diamondcreek-still-1200.jpg
-- name: catacombs-catacombs-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-smoking-cigarette.jpg
-- name: castle-wall-DSC-0067-copper-circuit-2.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-copper-circuit-2.JPG
-- name: aws-s3-square-C4NLtWrWMAAMY9d.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C4NLtWrWMAAMY9d.jpg
-- name: aws-s3-stories-old-yellow-house.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-yellow-house.jpg
-- name: white-house-lawn-white-house-window-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-gred-mash.jpg
-- name: locked-up-steam-lock-up-steam-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-satan-red.jpg
-- name: statue-of-liberty-front-view-statueofliberty-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-gred-mash.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
-- name: sand-hand-sand-hand-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-kand-two.jpg
-- name: blossombar-crafty-painting-file-00-00-50-18.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-18.jpg
-- name: ellis-island-ellisisland-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colored-circuits.jpg
-- name: rain-princess-IMG_7288.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7288.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-feed-people.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dark-soul.JPG
-- name: old-school-house-old-schoolhouse-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smoking-cigarette.jpg
-- name: amusement-park-amusement-park-2-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-plentiful.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-gred-mash.jpg
-- name: beach-rocks-beach-rocks-currents-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-yellow-paper.jpg
-- name: trucksilo-trucksilo-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-ww2-color.jpg
-- name: birdhouse-birdhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-brush.jpg
-- name: liberty-back-statue-liberty-back-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-pablo-blue.jpg
-- name: oldhouse-oldhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-kand-two.jpg
-- name: subway-subway-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-blue-circuit.jpg
-- name: old-gas-pumps-oldgaspumps-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-electricity.jpg
-- name: death-valley-death-valley-national-park-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-post-modern.jpg
-- name: aws-s3-blossombar-blossombar-still-1200.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still-1200.png
-- name: old-granary-field-oldhouse-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-matrix.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
-- name: meadowbutterfly-meadow-butterfly-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-post-modern.jpg
-- name: containership-containership-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-marcel-duchamp.jpg
-- name: old-door-lock-old-door-lock-2-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-alberto-giacometti.jpg
-- name: capital-battle-capitolbattle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-circuit.jpg
-- name: oldroad-old-road-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-purp-paper.jpg
-- name: catacombs-catacombs-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dali-three.jpg
-- name: nazi-invasion-IMG_1184.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_1184.jpg
-- name: liberty-back-statue-liberty-back-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-blue-circuit.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-far-away.jpg
-- name: oldhotel-oldhotel-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-granite.jpg
-- name: store-on-corner-store-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colorful-blocks.jpg
-- name: castle-wall-DSC-0067-light-dali.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-light-dali.JPG
-- name: capital-battle-capitolbattle-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-marcel-duchamp.jpg
-- name: ellis-island-ellisisland-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-gan-vogh.jpg
-- name: old-cabin-oldcabin-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-yellow-collage.jpg
-- name: old-door-lock-old-door-lock-2-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-crabapple.jpg
-- name: server-cloud-server-racks-door-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-really-hot.jpg
-- name: liberty-back-statue-liberty-back-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-post-modern.jpg
-- name: old-door-lock-old-door-lock-2-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colorful-blocks.jpg
+- name: aws-s3-canyon-canyon-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still.jpg
+- name: server-cloud-server-racks-door-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-umberto-bocc.jpg
+- name: aws-s3-square-border-traffic-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-border-traffic-square.jpg
+- name: hollywood-building-hollywood-building-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-pablo-blue.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dry-skin.jpg
+- name: bordercrossing-bordercrossing-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-colorful-blocks.jpg
+- name: oldtrain-oldtrain-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-atari-asteroids.jpg
+- name: crow_sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_sunday.jpg
+- name: old-church-oldchurch-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dark-soul.jpg
+- name: blossombar-crafty-painting-file-00-00-50-42.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-42.jpg
+- name: abandonedbuildings_purple_pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_purple_pond.jpg
+- name: abandonedbuildings_gan_vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_gan_vogh.jpg
+- name: sand-hand-sand-hand-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-propaganda-leaflets.jpg
+- name: oldsmallboat-oldsmallboat-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-far-away.jpg
+- name: border-crossing-bordercrossing-clean-view.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-clean-view.png
+- name: catacombs-catacombs-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-space-pizza.jpg
+- name: rain-princess-IMG_7319.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7319.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-granite.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-granite.png
+- name: amusement-park-amusement-park-2-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-deep-connections.jpg
+- name: oldroad-old-road-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-sunday.jpg
+- name: window-window-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-creativity.jpg
+- name: nazi-invasion-IMG_4753.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4753.jpg
+- name: old-barn-old-barn-1500-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-colored-circuits.jpg
+- name: fence-mexico-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dry-skin.jpg
+- name: cannon-facing-cannon-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-dark-dali.jpg
+- name: dragon_close-up-scream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-scream.jpg
+- name: old-gas-pumps-oldgaspumps-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-light-dali.jpg
+- name: server-cloud-server-racks-clouds-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-emily-carr.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-china-prop.jpg
+- name: mosaic-face-mosaic-face-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-post-modern.jpg
+- name: ellis-island-ellisisland-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-space-pizza.jpg
+- name: rain-princess-IMG_4300.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_4300.jpg
+- name: cargo-ship-cargo-ship-on-sea-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crafty-painting.jpg
+- name: oldcabin-store-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dark-dali.jpg
+- name: walled-garden-walled-garden-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-granite.jpg
+- name: supreme-court-supremecourt-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-marcel-duchamp.jpg
+- name: rockingchair-rockingchair-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-atari-asteroids.jpg
+- name: trucksilo-trucksilo-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-electricity.jpg
+- name: birdhouse-birdhouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-kandinsky-bv.jpg
+- name: aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
+- name: oldhouse-granaryfield-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-satan-red.jpg
+- name: aws-s3-columbiagorge-columbiagorge-transformed-still-1200.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-columbiagorge-columbiagorge-transformed-still-1200.png
+- name: oldbarn-oldbarn-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-ww2-dresden.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-cinnamon-rolls.jpg
+- name: downtown-los-angeles-downtown-la-rainbow-festival.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-rainbow-festival.JPG
+- name: power-lines-power-lines-empty-space-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colorful-blocks.jpg
+- name: curtain-curtain-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-dali.jpg
+- name: treeinhills-yellowtree-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/treeinhills-yellowtree-still-1200.jpg
+- name: birdhouse-birdhouse-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-internet-numbers.jpg
+- name: adam-smith-adam-smith-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crafty-painting.jpg
+- name: walled-garden-walled-garden-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-plentiful.jpg
 ---
 
